--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,3 @@
-*, *::before, *::after 
-{
-    box-sizing: border-box; 
-}
-
 body{
     background-color:black;
     color: white;
@@ -31,7 +26,8 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-.splash-inner{   text-align: center;
+.splash-inner{   
+    text-align: center;
     position: absolute;
     width: 100%;
     top: 50%;
@@ -111,3 +107,49 @@ body{
     font-size: 38px;
     letter-spacing: .2em;
 }
+
+.delivery{
+    background-color: white;
+    color: black;
+    text-align: center;
+}
+
+.delivery h2, h6, .row{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+}
+
+.delivery h2{
+    padding-top: 80px;
+    font-size: 36px;
+}
+
+.delivery h6{
+    font-size: 20px;
+    padding-bottom: 50px;
+    font-style: italic;
+    font-family: 'Ysabeau', sans-serif;
+    font-weight: normal;
+    color:rgb(158, 150, 150);
+}
+
+.delivery i{
+    font-size: 48px;
+    color: rgb(245, 199, 83);
+    line-height: 75px;
+    width: 85px;
+    height: 85px;
+    border: solid 3px rgb(245, 199, 83);
+    border-radius: 50%;
+}
+
+.card{
+    min-width: 330px;
+}
+
+.delivery p{
+    font-family: 'Ysabeau', sans-serif;
+    color:rgb(158, 150, 150);
+}
+
